# boto-plus

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
boto_plus/: README.md  __init__.py  batch_plus.py  dynamo_plus.py  helpers.py  s3_plus.py  sso_plus.py  step_function_plus.py
boto_plus/dynamo/: dynamo_helper.py
boto_plus/helpers/: __init__.py  helpers.py
boto_plus/s3/: s3_helper.py
cli/s3/: list_storage_size.sh
tests/: test_batch_plus.py  test_dynamo_plus.py  test_s3_helper.py  test_s3_plus.py  test_step_function_plus.py
tests/mock-iam-policies/: mock-admin-iam-policy.json  mock-batch-assume-role-policy.json
