[metadata]
name = boto_plus
version = 0.0.1
author = Andrew Stenger
description = Wrapper library to make it easier to use the boto3 Python library. Work is in progress, leading up to Release v1.0.0

[options]
packages = 
    boto_plus
    boto_plus.helpers

python_requires = >=3.9
install_requires =
    setuptools==61.0
    boto3==1.34
    botocore==1.34
    MarkupSafe==2.1.1
    more-itertools==10.2
    werkzeug==3.0
    moto==5.0
